# AplCore

./: Cargo.toml  README.md
aplbackend/: .gitignore  Cargo.toml
aplbackend/src/: main.rs
aplbackend/src/AuthTools/: jwt_helpers.rs  jwt_utils.rs  mod.rs
aplbackend/src/auth_tools/: jwt_utils.rs  mod.rs
aplbackend/src/authentication/: jwt_controllers.rs  jwt_models.rs
aplbackend/src/database/: application_crud.rs  batch_crud.rs  database.rs  jwt_crud.rs  mod.rs  user_crud.rs
aplbackend/src/endpoints/: application_controllers.rs  batch_controller.rs  jwt_controllers.rs  mod.rs  user_controllers.rs
aplbackend/src/models/: application_model.rs  batch_model.rs  jwt_models.rs  mod.rs  user_model.rs
aplfrontend/: package-lock.json  package.json
aplfrontend/src/: App.jsx  main.jsx  theme.js
aplfrontend/src/layouts/: Landing.jsx  Main.jsx
aplfrontend/src/routes/: AddApplication.jsx  Home.jsx  LandingPage.jsx  Register.jsx  Root.jsx
aplfrontend/src/routes/Landing/: AboutUs.jsx  Contact.jsx  LandingPage.jsx  Register.jsx
aplfrontend/src/routes/Main/: Profile.jsx
src/: main.rs
src/database/: database.rs  mod.rs
src/endpoints/: application_controllers.rs  mod.rs  user_controllers.rs
src/models/: application_model.rs  mod.rs  user_model.rs
